Fixed whitespace bug
This was due to images coming with by default a space because of the inline element.

> Changed all images to display: block in the css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ input {
   border-radius: 0;
 }
 
+img {
+  display: block;
+}
+
 h1, h2, h3, p {
   font-family: "Roboto", sans-serif;
 }
