--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -44,3 +44,7 @@
     -webkit-appearance: none;
     border-radius: 0;
   }
+
+  img {
+    display: block;
+  }
